[BG-246] Datepicker z-index fix

--- a/project-base/src/SS6/ShopBundle/Resources/styles/common/admin/todo.less
+++ b/project-base/src/SS6/ShopBundle/Resources/styles/common/admin/todo.less
@@ -104,6 +104,9 @@
 	color: @color-red;
 }
 
+.ui-datepicker {
+	z-index: 2 !important;
+}
 .text-red {
 	color: @color-red;
 }
